# HPM---Learning-Agent

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  dfs_out.txt  pyproject.toml  quick_fix_test.py  requirements.txt
.claude/: session-state.md
.serena/: project.yml
benchmarks/: README.md  arc_agi_2_compare.py  arc_benchmark.py  arc_completion_compare.py  arc_encoders.py  chem_logic_encoders.py  chem_logic_sim.py  common.py  completion_adapter.py  ds1000_encoders.py  ds1000_sim.py  elegance_recovery.py  hierarchical_arc.py  hierarchical_smoke.py  linguistic_encoders.py  linguistic_sim.py  multi_agent_arc.py  multi_agent_common.py  multi_agent_echo_chamber.py  multi_agent_elegance_recovery.py  multi_agent_reber_grammar.py  multi_agent_structural_immunity.py  multi_agent_substrate_efficiency.py  multi_domain_alignment.py  phyre_cross_domain_l4.py  phyre_cross_task_l4.py  phyre_delta_alignment.py  phyre_l4_sweep.py  phyre_sim.py  reber_completion_compare.py  reber_grammar.py  rosetta_geometric_benchmark.py  rosetta_geometric_sim.py  rosetta_sim.py  sp19_rosetta_refactor.py  structural_immunity.py  structured_arc.py  structured_chem_logic_l4l5.py  structured_chem_logic_v2.py  structured_completion_compare.py  (+8 more)
conductor/: 2026-03-24-hpm-ai-v1-design.md  2026-03-24-hpm-ai-v1-plan.md  2026-03-24-sp23-1-taboo-saliency-plan.md  2026-03-24-sp23-project-sovereignty-plan.md  2026-03-25-relational-structured-design.md  2026-03-25-relational-structured-plan.md  2026-03-25-structured-agents-composite-promotion-plan.md  2026-03-25-structured-agents-composite-promotion-spec.md  (+107 more)
(+1908 files in other folders)
