[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hpm-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
