[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hpm-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "requests>=2.31",
    "psutil>=5.9",
    "scikit-learn>=1.8.0",
    "nltk>=3.9.3",
    "sympy>=1.14.0",
    "datasets>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hpm", "hfn"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
